Ignore any infinite values when reading replaygain tags

Apparently QString::toFloat converts them happily to qreals with infinite value.
We don't really want them in database, however. Also edit TestMetaTrack::testReplayGain
to check that inf gain is ignored.

BUG: 486084